--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "job_portal_api",
   "version": "1.0.0",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --watch main.js"
@@ -10,12 +11,15 @@
   "author": "Sattam Salim Alsalama",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "formidable": "^2.1.1",
+    "image-url-validator": "^1.0.4",
     "mariadb": "^3.1.0",
+    "node-fetch": "^3.3.1",
     "rate-limiter-flexible": "^2.4.1"
   },
   "description": ""
